; ModuleID = '/home/carl/AnghaBench/openssl/crypto/rc2/extr_rc2_ecb.c_RC2_ecb_encrypt.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/rc2/extr_rc2_ecb.c_RC2_ecb_encrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RC2_ecb_encrypt(i8* %0, i8* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca [2 x i64], align 16
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = load i64, i64* %9, align 8
  %13 = call i32 @c2l(i8* %11, i64 %12)
  %14 = load i64, i64* %9, align 8
  %15 = getelementptr inbounds [2 x i64], [2 x i64]* %10, i64 0, i64 0
  store i64 %14, i64* %15, align 16
  %16 = load i8*, i8** %5, align 8
  %17 = load i64, i64* %9, align 8
  %18 = call i32 @c2l(i8* %16, i64 %17)
  %19 = load i64, i64* %9, align 8
  %20 = getelementptr inbounds [2 x i64], [2 x i64]* %10, i64 0, i64 1
  store i64 %19, i64* %20, align 8
  %21 = load i32, i32* %8, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %4
  %24 = getelementptr inbounds [2 x i64], [2 x i64]* %10, i64 0, i64 0
  %25 = load i32*, i32** %7, align 8
  %26 = call i32 @RC2_encrypt(i64* %24, i32* %25)
  br label %31

27:                                               ; preds = %4
  %28 = getelementptr inbounds [2 x i64], [2 x i64]* %10, i64 0, i64 0
  %29 = load i32*, i32** %7, align 8
  %30 = call i32 @RC2_decrypt(i64* %28, i32* %29)
  br label %31

31:                                               ; preds = %27, %23
  %32 = getelementptr inbounds [2 x i64], [2 x i64]* %10, i64 0, i64 0
  %33 = load i64, i64* %32, align 16
  store i64 %33, i64* %9, align 8
  %34 = load i64, i64* %9, align 8
  %35 = load i8*, i8** %6, align 8
  %36 = call i32 @l2c(i64 %34, i8* %35)
  %37 = getelementptr inbounds [2 x i64], [2 x i64]* %10, i64 0, i64 1
  %38 = load i64, i64* %37, align 8
  store i64 %38, i64* %9, align 8
  %39 = load i64, i64* %9, align 8
  %40 = load i8*, i8** %6, align 8
  %41 = call i32 @l2c(i64 %39, i8* %40)
  %42 = getelementptr inbounds [2 x i64], [2 x i64]* %10, i64 0, i64 1
  store i64 0, i64* %42, align 8
  %43 = getelementptr inbounds [2 x i64], [2 x i64]* %10, i64 0, i64 0
  store i64 0, i64* %43, align 16
  store i64 0, i64* %9, align 8
  ret void
}

declare dso_local i32 @c2l(i8*, i64) #1

declare dso_local i32 @RC2_encrypt(i64*, i32*) #1

declare dso_local i32 @RC2_decrypt(i64*, i32*) #1

declare dso_local i32 @l2c(i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
